--- a/.env.example
+++ b/.env.example
@@ -4,19 +4,19 @@
 # Anthropic: https://console.anthropic.com/
 
 # OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_API_KEY= your_openai_api_key_here
 OPENAI_MODEL=gpt-4-turbo-preview
 
 # Anthropic Configuration
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-ANTHROPIC_MODEL=claude-3-sonnet-20240229
+ANTHROPIC_API_KEY= your_anthropic_api_key_here
+ANTHROPIC_MODEL=claude-3-5-sonnet-20240620
 
 # Default Provider (openai or anthropic)
 DEFAULT_PROVIDER=openai
 
 # Model Configuration
 DEFAULT_TEMPERATURE=0.1
-DEFAULT_MAX_TOKENS=2000
+DEFAULT_MAX_TOKENS=1000
 
 # Feature Flags
 ENABLE_CACHING=true
